# fastapi-hands-on

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
router/: articles.py
routers/v1/: articles.py
