[tool.poetry]
name = "fastapi-hands-on"
version = "0.1.0"
description = ""
authors = ["youki-nagai <nagai@skygrid.co.jp>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
pyright = "^1.1.301"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
