[tool.poetry]
name = "fastapi-hands-on"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
pyright = "^1.1.301"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
